fix(style): align Login.gov button with Spanish/English button

--- a/benefits/static/css/styles.css
+++ b/benefits/static/css/styles.css
@@ -226,7 +226,7 @@ footer .footer-links a {
   content: " ";
   position: absolute;
   top: 50%;
-  width: 124px;
+  width: 142.5px;
   border-top: 3px dashed #53b3e2;
   margin-top: -1px;
   display: block;
@@ -249,7 +249,7 @@ footer .footer-links a {
 }
 
 .media-list .media .media-body {
-  padding: 0 28px;
+  padding: 0 3.8rem;
 }
 
 .media-list .media .media-body--heading {
@@ -282,6 +282,9 @@ footer .footer-links a {
 .eligibility-start .container.content {
   padding-top: 5rem;
   padding-bottom: 3rem;
+  width: initial;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .eligibility-start .buttons {
